--- a/packages.config
+++ b/packages.config
@@ -4,7 +4,24 @@
   <package id="iTextSharp" version="5.5.13.4" targetFramework="net48" />
   <package id="MahApps.Metro.IconPacks.Core" version="5.1.0" targetFramework="net48" />
   <package id="MahApps.Metro.IconPacks.Material" version="5.1.0" targetFramework="net48" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="8.0.1" targetFramework="net48" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="8.0.2" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Logging" version="8.0.1" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="8.0.2" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Options" version="8.0.2" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Primitives" version="8.0.0" targetFramework="net48" />
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.135" targetFramework="net48" />
   <package id="MvvmLightLibs" version="5.4.1.1" targetFramework="net48" />
+  <package id="PDFsharp-GDI" version="6.2.0" targetFramework="net48" />
+  <package id="PDFsharp-MigraDoc-GDI" version="6.2.0" targetFramework="net48" />
   <package id="PresentationFramework.Aero2" version="1.0.1" targetFramework="net48" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
+  <package id="System.Diagnostics.DiagnosticSource" version="8.0.1" targetFramework="net48" />
+  <package id="System.Memory" version="4.5.5" targetFramework="net48" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
+  <package id="System.Security.Cryptography.Pkcs" version="8.0.1" targetFramework="net48" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
 </packages>
