fix Stock report

--- a/App.config
+++ b/App.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
@@ -6,8 +6,7 @@
     <system.serviceModel>
 		<bindings>
       <netTcpBinding>
-          <binding name="NetTcpBinding_IMainManager" receiveTimeout="00:00:20"
-              sendTimeout="00:00:20" maxReceivedMessageSize="2147483086">
+          <binding name="NetTcpBinding_IMainManager" receiveTimeout="00:00:20" sendTimeout="00:00:20" maxReceivedMessageSize="2147483086">
               <security>
                   <transport sslProtocols="None" />
               </security>
@@ -15,13 +14,19 @@
       </netTcpBinding>
   </bindings>
 		<client>
-      <endpoint address="net.tcp://localhost:8081/Service" binding="netTcpBinding"
-          bindingConfiguration="NetTcpBinding_IMainManager" contract="ItaliaPizzaServices.IMainManager"
-          name="NetTcpBinding_IMainManager">
+      <endpoint address="net.tcp://localhost:8081/Service" binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IMainManager" contract="ItaliaPizzaServices.IMainManager" name="NetTcpBinding_IMainManager">
           <identity>
               <userPrincipalName value="DESKTOP-HKQ7CK7\Kaleb" />
           </identity>
       </endpoint>
   </client>
     </system.serviceModel>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Extensions.Logging.Abstractions" publicKeyToken="adb9793829ddae60" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-9.0.0.5" newVersion="9.0.0.5" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
